basic-k8-istio-tutorial/bff-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service-deployment
  labels:
    app: bff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
      - name: bff-service-cont
        image: bff-service:1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
