basic-k8-istio-tutorial/data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service-deployment
  labels:
    app: data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      containers:
      - name: data-service-cont
        image: data-service:1
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
