basic-k8-istio-tutorial/data-service-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-service
spec:
  hosts:
  - data-service
  http:
  - match:
    - headers:
        bff-version:
          exact: new
    route:
    - destination:
        host: data-service-new
  - route:
    - destination:
        host: data-service
